[gd_scene load_steps=3 format=3 uid="uid://dcx0dg4ham08k"]

[ext_resource type="Script" path="res://src/editor/variables/create_var_dialog.gd" id="1_sf002"]

[sub_resource type="LabelSettings" id="LabelSettings_tiu3i"]
font_color = Color(1, 0.48, 0.48, 1)

[node name="CreateVarDialog" type="PopupPanel" node_paths=PackedStringArray("var_name_input", "error_label")]
title = "New variable"
initial_position = 1
size = Vector2i(202, 90)
borderless = false
always_on_top = true
min_size = Vector2i(0, 90)
script = ExtResource("1_sf002")
var_name_input = NodePath("MarginContainer/VBoxContainer/HBoxContainer/NameInput")
error_label = NodePath("MarginContainer/VBoxContainer/ErrorLabel")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = 198.0
offset_bottom = 86.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Name"

[node name="NameInput" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ErrorLabel" type="Label" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "var name is empty"
label_settings = SubResource("LabelSettings_tiu3i")
horizontal_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="CancelButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Cancel"

[node name="OkButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "OK"

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/OkButton" to="." method="_on_ok_button_pressed"]
